Build conndev BaseSchema as the single source of the SQL schema mapping
The detected JDBC metadata is translated into the conndev framework schema model exactly once, and
everything else derives from it (ticket #11455 single source of default schema mapping):

- SqlSchemaDetector returns the raw detected tables (now including foreign keys: referenced
  table/column grouped by FK name, supporting composite keys) instead of setting a schema aside;
- SqlSchemaTranslator (detection strategies unchanged) builds a conndev BaseSchema from them: the
  table becomes the object-class locator, the single-PK column maps to __UID__, nullable maps to
  required, auto-increment identity columns become non-creatable/non-updateable, a FK becomes a
  reference on the attribute (referencedObjectClass/referencedAttribute, FK name as the subtype,
  subject role) and the native SQL type is kept as the attribute nativeType;
- SqlSchema is removed — it duplicated BaseSchema with a second, independent ConnId mapping;
- the ConnId schema for provisioning is BaseSchema.connIdSchema() and the development-mode
  conndev_ObjectClass export is the shared ConnDevObjectClassSerializer over the same model
  (SqlObjectClassDevHandler); in development mode the conndev_* classes are part of the schema;
- the connector base uses conndev ClassHandlerConnectorBase (local copy removed).

Covered by SqlSchemaDetectorIntegrationTest (raw detection incl. FKs), SqlSchemaTranslatorTest
(strategies + translated model keeps the native side), SqlDevSchemaExportIntegrationTest (export
derived from the model, composite FKs) and SqlDevConnectorIntegrationTest (end-to-end through the
connector dispatch).