@@ -1,7 +1,7 @@
 package com.evolveum.polygon.sql.base;
 
+import com.evolveum.polygon.conndev.schema.BaseSchema;
 import com.evolveum.polygon.sql.base.schema.SqlColumnMeta;
-import com.evolveum.polygon.sql.base.schema.SqlSchema;
 import com.evolveum.polygon.sql.base.schema.SqlSchemaDetector;
 import com.evolveum.polygon.sql.base.schema.SqlSchemaTranslator;
 import com.evolveum.polygon.sql.base.schema.SqlTableInfo;
@@ -10,12 +10,11 @@ import com.evolveum.polygon.sql.base.schema.strategy.NamedColumnUidStrategy;
 import com.evolveum.polygon.sql.base.schema.strategy.NonPkColumnsOnlyStrategy;
 import com.evolveum.polygon.sql.base.schema.strategy.PrefixEmbeddedDetectionStrategy;
 import com.evolveum.polygon.sql.base.test.H2DatabaseInitializer;
-import org.identityconnectors.framework.common.objects.Schema;
+import org.identityconnectors.framework.common.objects.Uid;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -39,76 +38,103 @@ public class SqlSchemaTranslatorTest {
         }
     }
 
+    private BaseSchema translated(SqlSchemaTranslator translator) {
+        return translator.translate(SqlSchemaDetectorIntegrationTest.StubConnector.class, context);
+    }
+
+    private List<SqlTableInfo> discovered() throws Exception {
+        return new SqlSchemaDetector(context).discover();
+    }
+
     @Test
     public void testDefaultStrategySinglePkUid() throws Exception {
-        SqlSchemaDetector detector = new SqlSchemaDetector(context); detector.discover(); SqlSchemaTranslator translator = new SqlSchemaTranslator(context.schema())
+        SqlSchemaTranslator translator = new SqlSchemaTranslator(discovered())
                 .addStrategy(new DefaultDetectionStrategy());
 
-        translator.translate();
-
-        assertThat(translator.toConnIdSchema().getObjectClassInfo()).hasSize(6);
+        assertThat(translated(translator).connIdSchema().getObjectClassInfo()).hasSize(6);
     }
 
     @Test
     public void testNamedColumnUidStrategy() throws Exception {
-        SqlSchemaDetector detector = new SqlSchemaDetector(context); detector.discover(); SqlSchemaTranslator translator = new SqlSchemaTranslator(context.schema())
+        SqlSchemaTranslator translator = new SqlSchemaTranslator(discovered())
                 .addStrategy(new NamedColumnUidStrategy("uid"));
 
-        translator.translate();
-
-        assertThat(translator.toConnIdSchema().getObjectClassInfo()).hasSize(6);
+        assertThat(translated(translator).connIdSchema().getObjectClassInfo()).hasSize(6);
     }
 
     @Test
     public void testNonPkColumnsOnlyStrategy() throws Exception {
-        SqlSchemaDetector detector = new SqlSchemaDetector(context); detector.discover(); SqlSchemaTranslator translator = new SqlSchemaTranslator(context.schema())
+        SqlSchemaTranslator translator = new SqlSchemaTranslator(discovered())
                 .addStrategy(new NonPkColumnsOnlyStrategy());
 
-        translator.translate();
-
-        assertThat(translator.toConnIdSchema().getObjectClassInfo()).hasSize(6);
+        assertThat(translated(translator).connIdSchema().getObjectClassInfo()).hasSize(6);
     }
 
     @Test
     public void testPrefixEmbeddedDetectionStrategy() throws Exception {
-        SqlSchemaDetector detector = new SqlSchemaDetector(context); detector.discover(); SqlSchemaTranslator translator = new SqlSchemaTranslator(context.schema())
+        SqlSchemaTranslator translator = new SqlSchemaTranslator(discovered())
                 .addStrategy(new PrefixEmbeddedDetectionStrategy("user"));
 
-        translator.translate();
-
-        assertThat(translator.toConnIdSchema().getObjectClassInfo()).hasSize(6);
+        assertThat(translated(translator).connIdSchema().getObjectClassInfo()).hasSize(6);
     }
 
     @Test
     public void testStrategyComposition() throws Exception {
-        SqlSchemaDetector detector = new SqlSchemaDetector(context); detector.discover(); SqlSchemaTranslator translator = new SqlSchemaTranslator(context.schema())
+        SqlSchemaTranslator translator = new SqlSchemaTranslator(discovered())
                 .addStrategy(new NamedColumnUidStrategy("id"))
                 .addStrategy(new NonPkColumnsOnlyStrategy())
                 .addStrategy(new PrefixEmbeddedDetectionStrategy("user"));
 
-        translator.translate();
-
-        assertThat(translator.toConnIdSchema().getObjectClassInfo()).hasSize(6);
+        assertThat(translated(translator).connIdSchema().getObjectClassInfo()).hasSize(6);
     }
 
     @Test
     public void testEmptySchema() throws Exception {
-        SqlSchema emptySchema = new SqlSchema(Arrays.asList());
+        SqlSchemaTranslator translator = new SqlSchemaTranslator(List.of());
 
-        SqlSchemaTranslator translator = new SqlSchemaTranslator(emptySchema);
-
-        translator.translate();
-
-        assertThat(translator.toConnIdSchema().getObjectClassInfo()).isEmpty();
+        // an empty model still yields the __Dummy workaround class required for test connection
+        var objectClasses = translated(translator).connIdSchema().getObjectClassInfo();
+        assertThat(objectClasses).hasSize(1);
+        assertThat(objectClasses.iterator().next().getType()).isEqualTo("__Dummy");
     }
 
     @Test
     public void testNullSchema() throws Exception {
         SqlSchemaTranslator translator = new SqlSchemaTranslator(null);
 
-        translator.translate();
+        var objectClasses = translated(translator).connIdSchema().getObjectClassInfo();
+        assertThat(objectClasses).hasSize(1);
+        assertThat(objectClasses.iterator().next().getType()).isEqualTo("__Dummy");
+    }
 
-        assertThat(translator.toConnIdSchema().getObjectClassInfo()).isEmpty();
+    @Test
+    public void testTranslatedModelKeepsNativeSide() throws Exception {
+        BaseSchema schema = translated(new SqlSchemaTranslator(discovered()));
+
+        var user = schema.objectClass("user");
+        assertThat(user).isNotNull();
+        assertThat(user.locator()).isEqualTo("user");
+
+        // the single-PK "id" column maps to __UID__ but keeps its native name and SQL type
+        var id = user.attributeFromProtocolName("id");
+        assertThat(id.connId().getName()).isEqualTo(Uid.NAME);
+        assertThat(id.nativeType()).isEqualTo("INT");
+
+        // auto-increment identity cannot be written
+        assertThat(id.connId().isCreateable()).isFalse();
+        assertThat(id.connId().isUpdateable()).isFalse();
+    }
+
+    @Test
+    public void testForeignKeyBecomesReference() throws Exception {
+        BaseSchema schema = translated(new SqlSchemaTranslator(discovered()));
+
+        var membership = schema.objectClass("projectmembership");
+        var userId = membership.attributeFromProtocolName("user_id");
+        assertThat(userId.connId().getReferencedObjectClassName()).isEqualTo("user");
+        assertThat(userId.referencedAttribute()).isEqualTo("id");
+        assertThat(userId.connId().getSubtype()).isNotBlank();
+        assertThat(userId.connId().isRequired()).isTrue();
     }
 
     @Test
@@ -197,14 +223,8 @@ public class SqlSchemaTranslatorTest {
 
     @Test
     public void testH2UserTableTranslation() throws Exception {
-        SqlSchemaDetector detector = new SqlSchemaDetector(context);
-        detector.discover();
+        BaseSchema schema = translated(new SqlSchemaTranslator(discovered()));
 
-        SqlSchemaTranslator translator = new SqlSchemaTranslator(context.schema());
-        translator.translate();
-
-        Schema connIdSchema = translator.toConnIdSchema();
-
-        assertThat(connIdSchema.getObjectClassInfo()).isNotEmpty();
+        assertThat(schema.connIdSchema().getObjectClassInfo()).isNotEmpty();
     }
 }
